# lsp-for-freemarker

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml  vsce.yml
clients/vsce/: .gitignore  .vscodeignore  (+8 more)
parser/tree-sitter-freemarker/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
parser/tree-sitter-freemarker/bindings/c/: tree-sitter-freemarker.pc.in
parser/tree-sitter-freemarker/bindings/go/: binding.go  binding_test.go
parser/tree-sitter-freemarker/bindings/node/: binding.cc  binding_test.js  index.d.ts  index.js
parser/tree-sitter-freemarker/bindings/python/tests/: test_binding.py
parser/tree-sitter-freemarker/bindings/python/tree_sitter_freemarker/: __init__.py  binding.c
parser/tree-sitter-freemarker/bindings/rust/: build.rs  grammar.rs  href.rs  lib.rs
parser/tree-sitter-freemarker/bindings/swift/TreeSitterFreemarker/: freemarker.h
parser/tree-sitter-freemarker/bindings/swift/TreeSitterFreemarkerTests/: TreeSitterFreemarkerTests.swift
parser/tree-sitter-freemarker/src/: .clangd  grammar.json  node-types.json  parser.c  scanner.c
server/: Cargo.toml
server/assets/completion/: assign(capture).toml  assign.toml  break.toml  ftl.toml  function.toml  if-else.toml  if-elseif-else.toml  if.toml  import.toml  list(hash).toml  list(sequence).toml  list-else.toml  list-sep.toml  local(capture).toml  local.toml  macro.toml  switch-case.toml  switch-on.toml
server/assets/hover/: c.toml  has_content.toml  is_hash.toml  keys.toml  seq_contains.toml  size.toml  values.toml
server/assets/hover/built-ins/: abs.toml  absolute_template_name.toml  api.toml  blank_to_null.toml  boolean.toml  byte.toml  c_lower_case.toml  c_upper_case.toml  cap_first.toml  capitalize.toml  ceiling.toml  chop_linebreak.toml  chunk.toml  cn.toml  contains.toml  date.toml  datetime.toml  double.toml  drop_while.toml  empty_to_null.toml  ends_with.toml  ensure_ends_with.toml  ensure_starts_with.toml  esc.toml  eval.toml  eval_json.toml  filter.toml  first.toml  float.toml  floor.toml  groups.toml  has_api.toml  index_of.toml  int.toml  interpret.toml  is_boolean.toml  is_collection.toml  is_collection_ex.toml  is_date.toml  is_date_like.toml  (+75 more)
server/assets/hover/types/: Boolean.toml  Number.toml  String.toml
server/src/: action.rs  analysis.rs  client.rs  completion.rs  diagnosis.rs  doc.rs  folding.rs  format.rs  goto.rs  hover.rs  init.rs  main.rs  parser.rs  protocol.rs  reactor.rs  server.rs  symbol.rs  tokenizer.rs  utils.rs  workspace.rs
(+2 files in other folders)
