[package]
name = "ftl-lsp-server"
version = "0.1.0"
authors = ["Lu Kai <kai.f.lu@nokia.com>"]
description = "A Freemarker Language Server implemented in Rust"
publish = false

edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "ftl-lsp-server"

[dependencies]
tree-sitter-freemarker = { path = "../parser/tree-sitter-freemarker" }

once_cell = "1.21.3"
ropey = "1.6.1"
rust-embed = "8.7.2"
serde = { version = "1.0.197", features = ["derive"] }
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.17"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.9.2"
tower-lsp-server = "0.23.0"
tree-sitter = "0.25.10"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-appender = "0.2.3"
