[package]
name = "tree-sitter-freemarker"
description = "a parser library for freemarker template language, based on tree-sitter"
version = "0.1.0"
authors = ["Lu Kai <kai.f.lu@nokia.com>", "Yuchen Wang"]
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "freemarker"]
categories = ["parsing", "text-editors"]
edition = "2024"
rust-version = "1.90"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
    "bindings/rust/*",
    "grammar.js",
    "queries/*",
    "src/*",
    "tree-sitter.json",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
strum = "0.27.2"
strum_macros = "0.27.2"
tree-sitter-language = "0.1.5"

[build-dependencies]
cc = "1.1.22"
codegen = "0.3.0"
convert_case = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"

[dev-dependencies]
tree-sitter = "0.25.10"
