[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-freemarker"
description = "a parser library for freemarker template language, based on tree-sitter"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "freemarker"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Lu Kai", email = "kai.f.lu@nokia.com" }]
requires-python = ">=3.9"
license.text = "BSD-3-Clause"
readme = "README.md"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
